# SnakeGame

./: .clang-format  .clangd  CMakeLists.txt  LICENSE
src/: food.cpp  food.hpp  gamestate.cpp  gamestate.hpp  main.cpp  snake.cpp  snake.hpp
